tests/ecc-aws-064-default_security_group_every_vpc_restricts_all_traffic/placebo-red/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "default VPC security group",
                "GroupName": "default",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-123456789abcdef12",
                                "UserId": "123456789876"
                            }
                        ]
                    }
                ],
                "OwnerId": "123456789876",
                "GroupId": "sg-123456789abcdef12",
                "IpPermissionsEgress": [],
                "VpcId": "vpc-abcdef98765432112"
            },
            {
                "Description": "default VPC security group",
                "GroupName": "default",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": [
                            {
                                "GroupId": "sg-223456789abcdef12",
                                "UserId": "123456789876"
                            }
                        ]
                    }
                ],
                "OwnerId": "123456789876",
                "GroupId": "sg-223456789abcdef12",
                "IpPermissionsEgress": [],
                "VpcId": "vpc-abcdef98765432113"
            }
        ],
        "ResponseMetadata": {}
    }
}
